# HW-from-course-ML-Engineer

./: README.md
ML/: README.md  hw_ml_all.ipynb
ML/1_pandas_math_task/: .gitlab-ci.yml  README.md  pyproject.toml
ML/1_pandas_math_task/data/: bernoulli.npy  data_pd.csv  exponential.npy  matrix.npy  poisson.npy
ML/1_pandas_math_task/pandas_math_task/: hw_pandas_math.ipynb  tasks.py
Python/: README.md  hw_python.ipynb
