[tool.poetry]
name = "pandas-math-task"
version = "0.1.0"
description = ""
authors = ["andreev.d.111 <andreev.d.111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
numpy = "1.23.5"
scipy = "1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
